ssl problem solved

--- a/static/index.html
+++ b/static/index.html
@@ -78,7 +78,8 @@
         }
 
         // Connect to WebSocket server with the dynamic room ID
-        const ws = new WebSocket(`ws://${location.host}/ws?room_id=${roomID}&username=${usernameInput.value}`);
+        const protocol = location.protocol === 'https:' ? 'wss' : 'ws';
+        const ws = new WebSocket(`${protocol}://${location.host}/ws?room_id=${roomId}&username=${username}`);
 
         ws.onmessage = function (event) {
             const msg = JSON.parse(event.data);
